Finished IntSet implementation